# -Solution-Test-SIG-ATTIKPO

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml
Notebooks/: 01_Calcul_Distances.ipynb  02_Agregation_Territoriale.ipynb  03_Visualisation_Cartographique.ipynb
data/: Etablissement_scolaire_Zio.gpkg  Togo_Cantons.gpkg
data/output/: agregation_cantons.parquet  agregation_communes.parquet  population_distances.parquet
src/: aggregation.py  distance_calculation.py  visualization.py
tests/: conftest.py  test_aggregation.py  test_distances.py  test_visualization.py
