[project]
name = "sig-01-accessibilite-scolaire"
version = "0.1.0"
description = "Test technique SIG-01 — Accessibilité scolaire dans la préfecture de Zio"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "folium>=0.15",
    "contextily>=1.5",
    "pyarrow>=17.0",
    "pytest>=8.0",
    "fiona>=1.9",
    "shapely>=2.0",
]
